--- a/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
+++ b/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
@@ -747,7 +747,7 @@
 						<Trigger Property="IsReadOnly" Value="True">
 							<Setter Property="BorderThickness" Value="0" />
 							<Setter Property="Padding" Value="6,4,6,4" />
-							<Setter Property="Focusable" Value="False" />
+							<!--<Setter Property="Focusable" Value="False" />-->
 							<Setter Property="Background" Value="{StaticResource BackgroundDark}" />
 						</Trigger>
 						<!--  IsKeyboardFocused  -->
